# easyfirmware

./: .gitignore  README.md  pyproject.toml  requirements.txt
easyfirmware/: oneplus.py  samsung.py
