#
# Only used for rye, not meant to be published on PyPI.
# https://rye-up.com/
#
[project]
name = "easyfirmware"
description = "easyfirmware"
version = "0.1.0"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "httpx~=0.20.0",
    "lxml==4.9.3",
    "beautifulsoup4~=4.12.2",
    "xmltodict==0.13.0",
    "dicttoxml==1.7.16",
    "pycryptodome~=3.19.0"
]
requires-python = ">=3.9,<3.10"

[tool.setuptools]
packages = ["easyfirmware"]

[tool.rye]
dev-dependencies = [
    "ruff~=0.0.290"
]

[tool.ruff]
line-length = 100